--- a/contact.html
+++ b/contact.html
@@ -84,6 +84,7 @@
 <!-- /page title -->
 
 <!-- contact -->
+
 <section class="section section-on-footer" data-background="images/backgrounds/bg-dots.png">
   <div class="container">
     <div class="row">
@@ -131,6 +132,10 @@
         <div class="col-md-4">
           <h5 class="text-light">Address</h5>
           <p class="text-white paragraph-lg font-secondary">12 Saint Germain Street, Boston, MA, USA</p>
+        </div>
+        <div class="col-md-4">
+          <h5 class="text-light">Email</h5>
+            <b-link href="#foo">nagapriya2022@gmail.com</b-link>
         </div>
       </div>
     </div>
