--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-11 mx-auto">
-          <h1 class="text-white font-tertiary">Hi! I’m <br> Priya <br></h1>
+          <h1 class="text-white font-tertiary">Hi! I’m <br> Priya <br><b-badge><br>Software Engineer</b-badge></h1>
         </div>
       </div>
     </div>
