Made few changes

--- a/contact.html
+++ b/contact.html
@@ -113,6 +113,9 @@
       </div>
     </div>
   </div>
+  <div class="alert alert-info" role="alert">
+    Please Email first before making a call!
+  </div>
 </section>
 <!-- /contact -->
 
