--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           </li>
         </ul>
       </div>
+      
     </nav>
   </header>
 
@@ -356,14 +357,11 @@
           <!-- slider-item -->
           <div class="text-center testimonial-content">
             <i class="ti-quote-right text-white icon mb-4 d-inline-block"></i>
-            <p class="text-white mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <strong>quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex ea commodo consequat.</strong> Duis aute irure dolor in reprehenderit
-              in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <p class="text-white mb-4">Priya has a definite intent to learn and grow. She hit the ground running and always completed her tasks before deadline.In her work she has shown herself as a very bright and diligent young engineer.</p>
             <img class="img-fluid rounded-circle mb-4 d-inline-block" src="images/testimonial/client-1.png"
               alt="client-image">
-            <h4 class="text-white">Jesica Gomez</h4>
-            <h6 class="text-light mb-4">CEO, Funder</h6>
+            <h4 class="text-white">Srivatsav Paramkusam</h4>
+            <h6 class="text-light mb-4">Manager, Optum</h6>
           </div>
           <!-- slider-item -->
           <div class="text-center testimonial-content">
