--- a/index.html
+++ b/index.html
@@ -116,10 +116,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-10 mx-auto text-center">
-          <p class="font-secondary paragraph-lg text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-            in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <p class="font-secondary paragraph-lg text-dark"></p>
           <a href="about.html" class="btn btn-transparent">know more</a>
         </div>
       </div>
@@ -358,7 +355,7 @@
           <div class="text-center testimonial-content">
             <i class="ti-quote-right text-white icon mb-4 d-inline-block"></i>
             <p class="text-white mb-4">Priya has a definite intent to learn and grow. She hit the ground running and always completed her tasks before deadline.In her work she has shown herself as a very bright and diligent young engineer.</p>
-            <img class="img-fluid rounded-circle mb-4 d-inline-block" src="images/testimonial/client-1.png"
+            <img class="img-fluid rounded-circle mb-4 d-inline-block"  width= 70px  height = 70px src="images/testimonial/client-1.jpeg"
               alt="client-image">
             <h4 class="text-white">Srivatsav Paramkusam</h4>
             <h6 class="text-light mb-4">Manager, Optum</h6>
